--- a/public/pages/teamone/labor.html
+++ b/public/pages/teamone/labor.html
@@ -64,7 +64,7 @@
           <div id="mainBefore">
             <img src="/assets/img/LAB_01_BILDSCHIRM.jpg" style="width:100%; height: auto; max-width: 100%;">
             <div class="dropdown d-none" id="dropdownMain">
-              <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMainButton"
+              <button class="btn btn-outline-dark dropdown-toggle" type="button" id="dropdownMainButton"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Hinweis gefällig?
               </button>
@@ -113,7 +113,7 @@
           <div id="picCake">
             <img src="/assets/img/LAB01_Nenbenraum_Tur.jpg" style="width:100%; height: auto; max-width: 100%;">
             <div class="dropdown">
-              <button class="btn btn-outline.dark dropdown-toggle" type="button" id="dropdownMenuButton"
+              <button class="btn btn-outline-dark dropdown-toggle" type="button" id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Hinweis gefällig?
               </button>
